<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MusicInterpreter</string>

    <string name="open_file_title">1. Open file</string>
    <string name="file_selection_info">Choose the file you want to analyze. Apply filters if needed.</string>
    <string name="file_path_prefix">Selected file:</string>
    <string name="file_path_hint">Select a file&#8230;</string>
    <string name="open_file_button">Select file</string>
    <string name="apply_filters_button">Apply filters</string>

    <string name="read_file_title">2. Read file</string>
    <string name="read_file_info">Here you can read the file contents.</string>
    <string name="read_file_button">Read file</string>
    <string name="read_file_error">Error: Unable to read file!</string>

    <string name="parameters_title">3. Parameters</string>
    <string name="parameters_info">Adjust the parameters for identifying notes.</string>
    <string name="parameters_sensitivity">Sensitivity:</string>
    <string name="parameters_threshold">Amplitude threshold:</string>
    <string name="parameters_windowSize">Window size:</string>

    <string name="analysis_title">4. Analysis</string>
    <string name="analyze_file_info">Analyze the notes.</string>
    <string name="analyze_minRelAmpBar_text">Min. rel. amp. of extra notes:</string>
    <string name="analyze_file_button">Analyze!</string>
    <string name="playPauseButton_textPlay">Play</string>
    <string name="playPauseButton_textPause">Pause</string>
    <string name="stopButton_text">Stop</string>
    <string name="upButton_text">Up</string>
    <string name="downButton_text">Down</string>

    <string name="scroll_block_msg">Complete this screen before moving on!</string>


    <string name="filter_app_name">MusicInterpreter: Filters</string>

    <string name="filters_freqPrefix">Frequency: </string>
    <string name="filters_highPass">High-Pass</string>
    <string name="filters_lowPass">Low-Pass</string>
    <string name="filters_undo">Undo</string>
</resources>
