<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/read_file_info"
        android:id="@+id/textView3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_file_button"
        android:id="@+id/readFileButton"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/read_file_progress"
        android:indeterminateBehavior="repeat"
        android:max="1"
        android:progress="0"
        android:layout_alignBottom="@+id/readFileButton"
        android:layout_below="@+id/textView3"
        android:layout_toStartOf="@+id/filterButton"
        android:layout_toEndOf="@id/readFileButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_filters_button"
        android:id="@+id/filterButton"
        android:clickable="false"
        android:enabled="false"
        android:layout_below="@+id/textView3"
        android:layout_alignParentEnd="true" />

    <me.marc_himmelberger.musicinterpreter.ui.WaveformView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/waveform"
        android:layout_below="@+id/readFileButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="false"
        android:layout_marginTop="@dimen/fragment_separation_vertical" />

</RelativeLayout>